
Features:

* Read binrepos.conf from /usr/share/portage/config as well.

* bintree: Run trust helper when any binrepos.conf configuration has
  verify-signature enabled (bug #969187)

* Scheduler: No background mode if there is just one merge job (bug #339579)

* emerge: Warn on installed packages in @world without ebuilds available
  (bug #911180).

Bug fixes:

* man: portage(5): Document that binrepos.conf location must be unique.

* bintree: Improve error message for per-binhost Packages fetch failure.

* phase-helpers.sh: Fix unpack vs. empty suffixes (bug #969217).

* estrip: Silence noise from objcopy when no build ID section exists (bug #968220).

portage-3.0.77 (2026-01-23)
--------------

Breaking changes:

* binrepo: Default to /var/cache/binhost/${NAME} for `location` (bug #945385)

  This is needed to cleanly separate locally-created binpkgs vs
  remote fetched binpkgs, which is important for allowing per-repository
  PGP verification, but also e.g. deploying your own binhost without
  (re-)serving other binpkgs unintentionally.

  Support for `location` was introduced for bug #934784. gentoolkit's
  eclean-pkg supports multiple binpkg locations rather than just `PKGDIR`
  since gentoolkit-0.7 (bug #947694).

Bug fixes:

* doebuild: Fix unexported_env_vars call to chown.

  This affects egencache when called with an alternative PORTAGE_USERNAME
  and PORTAGE_GRPNAME w/ >= EAPI 9.

* man: make.conf(5): Mention in another place (--getbinpkg) the existence
  of binrepos.conf.

* man: make.conf(5): Document in another place (--getbinpkg) that PORTAGE_BINHOST
  is deprecated.

  Use binrepos.conf instead.

Cleanups:

* doebuild: Fix typos in docstring.

portage-3.0.76 (2026-01-18)
--------------

First release with EAPI 9 support declared!

Features:

* Enable EAPI 9!

* Scheduler: implicit jobserver slot support (bug #692576)

  Followup to previous FEATURES="jobserver-token" support.

Bug fixes:
